--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-APP_NAME=Quiz
-URL=localhost
-PORT=8001
+GAME_NAME=quiz
+APP_NAME=QUIZ
+URL=http://localhost
+PORT=8002
 
 DB_CONNECTION=mongodb
 DB_PORT=27017
@@ -16,3 +17,6 @@ SESSION_SECRET=somesecretkey
 PASSWORD_PATTERN=^[A-Za-z0-9_]{3,20}$
 SALT=myQuizSalt!
 QUIZ_QUESTION_QUANTITY=3
+
+key=02aab0f70eca03ff02aab0f70eca03ff
+algorithm=aes256
